Claude Cowork Iteration - Menu ui/ux improvements and OpenRewrite recipes launched (manual).